@@ -814,6 +814,9 @@ public interface StorageServiceMBean extends NotificationEmitter
     public void enforceConcurrentValidatorsLimit();
     public boolean isConcurrentValidatorsLimitEnforced();
 
+    int getConcurrentIndexBuilders();
+    void setConcurrentIndexBuilders(int value);
+
     public int getConcurrentValidators();
     public void setConcurrentValidators(int value);
 
